force-app/main/default/objects/Lead/fields/Alcald_a_Municipio__c.field-meta.xml
<CustomField>
    <fullName>Alcald_a_Municipio__c</fullName>
    <label>Alcaldía / Municipio</label>
    <length>200</length>
    <type>Text</type>
</CustomField>