force-app/main/default/objects/Lead/fields/aplicador_autorizado__c.field-meta.xml
<CustomField>
    <fullName>aplicador_autorizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Busca ser aplicador autorizado?</label>
    <type>Checkbox</type>
</CustomField>