force-app/main/default/objects/Lead/fields/C_P__c.field-meta.xml
<CustomField>
    <fullName>C_P__c</fullName>
    <label>C.P</label>
    <length>20</length>
    <type>Text</type>
</CustomField>