force-app/main/default/objects/Lead/fields/Canal_de_distribucion__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_distribucion__c</fullName>
    <defaultValue>&quot;02&quot;</defaultValue>
    <label>Canal de distribución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CanalDistribucion</valueSetName>
    </valueSet>
</CustomField>