force-app/main/default/objects/Lead/fields/Certificaciones__c.field-meta.xml
<CustomField>
    <fullName>Certificaciones__c</fullName>
    <label>¿Con qué certitificaciones cuenta?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>