force-app/main/default/objects/Lead/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <description>Clase de Lead restringidos los valores de la lista</description>
    <label>Clase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Infraestructura</fullName>
            </value>
            <value>
                <fullName>Vivienda</fullName>
            </value>
            <value>
                <fullName>Edificacion</fullName>
            </value>
            <value>
                <fullName>Edificación</fullName>
                <isActive>false</isActive>
                <label>Edificación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>