force-app/main/default/objects/Lead/fields/Clave_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Clave_Proyecto__c</fullName>
    <label>Clave Proyecto</label>
    <length>25</length>
    <type>Text</type>
</CustomField>