force-app/main/default/objects/Lead/fields/Comentarios_Internos__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Internos__c</fullName>
    <label>Comentarios Internos</label>
    <length>150</length>
    <type>Text</type>
</CustomField>