force-app/main/default/objects/Lead/fields/Creado_por_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Creado_por_Equipo__c</fullName>
    <formula>TEXT( CreatedBy.Equipo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creado por Equipo</label>
    <type>Text</type>
</CustomField>