force-app/main/default/objects/Lead/fields/Descripcion_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_Proyecto__c</fullName>
    <description>Área de texto largo para almacenar la descripción del proyecto</description>
    <label>Descripcion del Proyecto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>