force-app/main/default/objects/Lead/fields/Dias_sin_actualizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Dias_sin_actualizaci_n__c</fullName>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días sin actualización</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>