force-app/main/default/objects/Lead/fields/DiaSinactividad__c.field-meta.xml
<CustomField>
    <fullName>DiaSinactividad__c</fullName>
    <formula>DATEVALUE(NOW())- LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Sin acitividad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>