force-app/main/default/objects/Lead/fields/DireccionCompania__c.field-meta.xml
<CustomField>
    <fullName>DireccionCompania__c</fullName>
    <description>Área de texto para dirección de la compañia</description>
    <label>Dirección de la compañia</label>
    <type>TextArea</type>
</CustomField>