force-app/main/default/objects/Lead/fields/distribuidor_imperquimia__c.field-meta.xml
<CustomField>
    <fullName>distribuidor_imperquimia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Desea ser distribuidor de Imperquimia?</label>
    <type>Checkbox</type>
</CustomField>