force-app/main/default/objects/Lead/fields/Enviar_Notificaci_n_de_Asignaci_n__c.field-meta.xml
<CustomField>
    <fullName>Enviar_Notificaci_n_de_Asignaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detener envio</label>
    <type>Checkbox</type>
</CustomField>