force-app/main/default/objects/Lead/fields/Equipo__c.field-meta.xml
<CustomField>
    <fullName>Equipo__c</fullName>
    <formula>TEXT( Owner:User.Equipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipo</label>
    <type>Text</type>
</CustomField>