force-app/main/default/objects/Lead/fields/Es_persona_fisica__c.field-meta.xml
<CustomField>
    <fullName>Es_persona_fisica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es persona física?</label>
    <type>Checkbox</type>
</CustomField>