force-app/main/default/objects/Lead/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGS</fullName>
                <label>AGUASCALIENTES</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>BAJA CALIFORNIA</label>
            </value>
            <value>
                <fullName>BCS</fullName>
                <label>BAJA CALIFORNIA S</label>
            </value>
            <value>
                <fullName>CHI</fullName>
                <label>CHIHUAHUA</label>
            </value>
            <value>
                <fullName>CHS</fullName>
                <label>CHIAPAS</label>
            </value>
            <value>
                <fullName>CMP</fullName>
                <label>CAMPECHE</label>
            </value>
            <value>
                <fullName>CMX</fullName>
                <label>CIUDAD DE MÉXICO</label>
            </value>
            <value>
                <fullName>COA</fullName>
                <label>COAHUILA</label>
            </value>
            <value>
                <fullName>COL</fullName>
                <label>COLIMA</label>
            </value>
            <value>
                <fullName>DGO</fullName>
                <label>DURANGO</label>
            </value>
            <value>
                <fullName>GRO</fullName>
                <label>GUERRERO</label>
            </value>
            <value>
                <fullName>GTO</fullName>
                <label>GUANAJUATO</label>
            </value>
            <value>
                <fullName>HGO</fullName>
                <label>HIDALGO</label>
            </value>
            <value>
                <fullName>JAL</fullName>
                <label>JALISCO</label>
            </value>
            <value>
                <fullName>MCH</fullName>
                <label>MICHOACÁN</label>
            </value>
            <value>
                <fullName>MEX</fullName>
                <label>ESTADO DE MÉXICO</label>
            </value>
            <value>
                <fullName>MOR</fullName>
                <label>MORELOS</label>
            </value>
            <value>
                <fullName>NAY</fullName>
                <label>NAYARIT</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>NUEVO LEÓN</label>
            </value>
            <value>
                <fullName>OAX</fullName>
                <label>OAXACA</label>
            </value>
            <value>
                <fullName>PUE</fullName>
                <label>PUEBLA</label>
            </value>
            <value>
                <fullName>QR</fullName>
                <label>QUINTANA ROO</label>
            </value>
            <value>
                <fullName>QRO</fullName>
                <label>QUERÉTARO</label>
            </value>
            <value>
                <fullName>SIN</fullName>
                <label>SINALOA</label>
            </value>
            <value>
                <fullName>SLP</fullName>
                <label>SAN LUIS POTOSÍ</label>
            </value>
            <value>
                <fullName>SON</fullName>
                <label>SONORA</label>
            </value>
            <value>
                <fullName>TAB</fullName>
                <label>TABASCO</label>
            </value>
            <value>
                <fullName>TLX</fullName>
                <label>TLAXCALA</label>
            </value>
            <value>
                <fullName>TMS</fullName>
                <label>TAMAULIPAS</label>
            </value>
            <value>
                <fullName>VER</fullName>
                <label>VERACRUZ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>