force-app/main/default/objects/Lead/fields/EtapaBIMSA__c.field-meta.xml
<CustomField>
    <fullName>EtapaBIMSA__c</fullName>
    <description>Etapa del lead para BIMSA</description>
    <label>EtapaBIMSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Plan</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Pre-Inicio</fullName>
            </value>
            <value>
                <fullName>Proyecto</fullName>
            </value>
            <value>
                <fullName>Inicio</fullName>
            </value>
            <value>
                <fullName>Obra Negociada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>