force-app/main/default/objects/Lead/fields/Fecha_de_inicio_del_proyecto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio_del_proyecto__c</fullName>
    <description>Almacena la fecha de inicio del proyecto</description>
    <label>Fecha de inicio del proyecto</label>
    <type>Date</type>
</CustomField>