force-app/main/default/objects/Lead/fields/fecha_de_termino_proyecto__c.field-meta.xml
<CustomField>
    <fullName>fecha_de_termino_proyecto__c</fullName>
    <description>Almacena la fecha de termino</description>
    <label>Fecha de termino del proyecto</label>
    <type>Date</type>
</CustomField>