force-app/main/default/objects/Lead/fields/fecha_publicacion__c.field-meta.xml
<CustomField>
    <fullName>fecha_publicacion__c</fullName>
    <description>Fecha de publicación desde el servicio</description>
    <label>Fecha de publicación</label>
    <type>Date</type>
</CustomField>