force-app/main/default/objects/Lead/fields/Gestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Gestor_Email__c</fullName>
    <description>Este campo será de Lectura y se auto calculara dependiendo del Manager del Propietario , servirá para uso de Alertas y notificaciones de escalación</description>
    <label>Gestor Email</label>
    <type>Email</type>
</CustomField>