force-app/main/default/objects/Lead/fields/Grupo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Cliente__c</fullName>
    <defaultValue>&quot;14&quot;</defaultValue>
    <label>Grupo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Canal_de_distribucion__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Grupo_de_Cliente</valueSetName>
    </valueSet>
</CustomField>