force-app/main/default/objects/Lead/fields/ID_Sugar__c.field-meta.xml
<CustomField>
    <fullName>ID_Sugar__c</fullName>
    <label>ID_Sugar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>