force-app/main/default/objects/Lead/fields/inversion__c.field-meta.xml
<CustomField>
    <fullName>inversion__c</fullName>
    <label>¿Cuánto puede invertir mensualmente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entre $50,000 y $74,000</fullName>
            </value>
            <value>
                <fullName>Entre $75,000 y $149,000</fullName>
            </value>
            <value>
                <fullName>Más de $150,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>