force-app/main/default/objects/Lead/fields/InversionBimsa__c.field-meta.xml
<CustomField>
    <fullName>InversionBimsa__c</fullName>
    <description>Monto de inversión de BR</description>
    <label>Inversión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>