force-app/main/default/objects/Lead/fields/Lista_de_Precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios__c</fullName>
    <defaultValue>&quot;03&quot;</defaultValue>
    <label>Lista de Precios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lista_de_precios_SAP</valueSetName>
    </valueSet>
</CustomField>