force-app/main/default/objects/Lead/fields/Num_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Num_Exterior__c</fullName>
    <label>Núm. Exterior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>