force-app/main/default/objects/Lead/fields/numero_de_niveles__c.field-meta.xml
<CustomField>
    <fullName>numero_de_niveles__c</fullName>
    <description>Número de niveles desde la integración con BR</description>
    <label>Número de niveles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>