force-app/main/default/objects/Lead/fields/numero_de_unidades__c.field-meta.xml
<CustomField>
    <fullName>numero_de_unidades__c</fullName>
    <description>Número de unidades desde la integración de BR</description>
    <label>Número de Unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>