force-app/main/default/objects/Lead/fields/Opciones__c.field-meta.xml
<CustomField>
    <fullName>Opciones__c</fullName>
    <label>Seleccione una de las opciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quiero anexar a mi negocio actual los productos de Imperquimia</fullName>
            </value>
            <value>
                <fullName>Busco colocar un punto de venta exclusivo de productos de Imperquimia, aún no tengo el local</fullName>
            </value>
            <value>
                <fullName>Busco colocar un punto de venta exclusivo de productos de Imperquimia y ya tengo el local</fullName>
            </value>
            <value>
                <fullName>Quiero comercializar algunos productos de Imperquimia</fullName>
            </value>
            <value>
                <fullName>Otra opción</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>