force-app/main/default/objects/Lead/fields/Otras_marcas__c.field-meta.xml
<CustomField>
    <fullName>Otras_marcas__c</fullName>
    <label>Otras marcas</label>
    <length>30</length>
    <type>Text</type>
</CustomField>