force-app/main/default/objects/Lead/fields/Productos__c.field-meta.xml
<CustomField>
    <fullName>Productos__c</fullName>
    <description>Almacena los productos de la integración de BR</description>
    <label>Productos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>