force-app/main/default/objects/Lead/fields/Prospecto_Abierto__c.field-meta.xml
<CustomField>
    <fullName>Prospecto_Abierto__c</fullName>
    <formula>IF(  OR(TEXT( Status ) = &quot;Nuevo&quot;, TEXT(Status) = &quot;Contactado&quot;,TEXT(Status) = &quot;Trabajando&quot;),true,false)</formula>
    <label>Prospecto Abierto</label>
    <type>Checkbox</type>
</CustomField>