force-app/main/default/objects/Lead/fields/Raz_n_de_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Raz_n_de_Perdida__c</fullName>
    <label>Razón de Perdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No contesto</fullName>
            </value>
            <value>
                <fullName>No esta interesado</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Compro el material en otro lado</fullName>
            </value>
            <value>
                <fullName>Sólo quería saber precios</fullName>
            </value>
            <value>
                <fullName>Calidad del servicio</fullName>
            </value>
            <value>
                <fullName>Duplicado</fullName>
            </value>
            <value>
                <fullName>Compro con Distribuidor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>