force-app/main/default/objects/Lead/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <defaultValue>&quot;XXX220518XXX&quot;</defaultValue>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>