force-app/main/default/objects/Lead/fields/superficie_urbanizada__c.field-meta.xml
<CustomField>
    <fullName>superficie_urbanizada__c</fullName>
    <description>Superficie urbanizada desde la integración con BR</description>
    <label>Superficie Urbanizada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>