force-app/main/default/objects/Lead/fields/superficieonstruida__c.field-meta.xml
<CustomField>
    <fullName>superficieonstruida__c</fullName>
    <description>Superficie urbanizada desde la integración con BRAnalytics</description>
    <label>Superficie Construida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>