force-app/main/default/objects/Lead/fields/t1__c.field-meta.xml
<CustomField>
    <fullName>t1__c</fullName>
    <description>Campo para prospectos de BIMSA</description>
    <label>t1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>