force-app/main/default/objects/Lead/fields/tipo_de_desarrollo__c.field-meta.xml
<CustomField>
    <fullName>tipo_de_desarrollo__c</fullName>
    <description>Tipo de desarrollo desde la integración con BRAnalytics</description>
    <label>Tipo de Desarrollo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obra Nueva</fullName>
            </value>
            <value>
                <fullName>Adecuacion</fullName>
            </value>
            <value>
                <fullName>Remodelación</fullName>
            </value>
            <value>
                <fullName>Ampliacion</fullName>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Rehabilitacion</fullName>
            </value>
            <value>
                <fullName>Rehabilitación</fullName>
                <isActive>false</isActive>
                <label>Rehabilitación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>