force-app/main/default/objects/Lead/fields/tipo_de_proyecto__c.field-meta.xml
<CustomField>
    <fullName>tipo_de_proyecto__c</fullName>
    <description>Tipo de proyecto desde BR Analytics</description>
    <label>Tipo de Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proyectos de Inversión</fullName>
            </value>
            <value>
                <fullName>Proyectos Contratados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>