force-app/main/default/objects/Lead/fields/unidad_superficie_urbanizada__c.field-meta.xml
<CustomField>
    <fullName>unidad_superficie_urbanizada__c</fullName>
    <description>Unidad superficie urbanizada desde la integración de BRAnalytics</description>
    <label>Unidad de Superficie Urbanizada</label>
    <length>30</length>
    <type>Text</type>
</CustomField>