force-app/main/default/objects/Lead/fields/unidad_superficieonstruida__c.field-meta.xml
<CustomField>
    <fullName>unidad_superficieonstruida__c</fullName>
    <description>Unidad superficie construida desde la integración con BRAnalytics</description>
    <label>Unidad superficie construida</label>
    <length>30</length>
    <type>Text</type>
</CustomField>