force-app/main/default/objects/Lead/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>