force-app/main/default/objects/Lead/recordTypes/Prospecto.recordType-meta.xml
<RecordType>
    <fullName>Prospecto</fullName>
    <active>true</active>
    <businessProcess>Prospecto BIMSA</businessProcess>
    <label>Prospecto</label>
</RecordType>