force-app/main/default/objects/Lead/recordTypes/Prospecto_BIMSA.recordType-meta.xml
<RecordType>
    <fullName>Prospecto_BIMSA</fullName>
    <active>true</active>
    <businessProcess>Prospecto BIMSA</businessProcess>
    <label>Prospecto BIMSA</label>
</RecordType>