force-app/main/default/objects/Lead/validationRules/RFC_Fisica.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_Fisica</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
Es_persona_fisica__c =TRUE,
NOT(
OR(LEN(RFC__c) = 0,
AND(
OR(LEN( RFC__c ) = 13, LEN( RFC__c) = 10),
CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;, LEFT( RFC__c, 1)),
CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;, MID( RFC__c, 2, 1)),
CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;, MID( RFC__c, 3, 1)),
CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;, MID( RFC__c, 4, 1)),

CONTAINS(&quot;0123456789&quot;, MID( RFC__c, 5, 1)),
CONTAINS(&quot;0123456789&quot;, MID( RFC__c, 6, 1)),

CONTAINS(&quot;01&quot;, MID( RFC__c, 7, 1)),

IF(
CONTAINS(&quot;1&quot;, MID( RFC__c, 7, 1)),
CONTAINS(&quot;012&quot;, MID( RFC__c, 8, 1)),
CONTAINS(&quot;123456789&quot;, MID( RFC__c, 8, 1))
),



CONTAINS(&quot;0123&quot;, MID( RFC__c, 9, 1)),


IF(
CONTAINS(&quot;3&quot;, MID( RFC__c, 9, 1)),
CONTAINS(&quot;01&quot;, MID( RFC__c, 10, 1)),
IF(
CONTAINS(&quot;0&quot;, MID( RFC__c, 9, 1)),
CONTAINS(&quot;123456789&quot;, MID( RFC__c, 10, 1)) ,
CONTAINS(&quot;0123456789&quot;, MID( RFC__c, 10, 1))
)
),

CONTAINS(&quot;0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;, MID( RFC__c, 11, 1)),
CONTAINS(&quot;0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;, MID( RFC__c, 12, 1)),
CONTAINS(&quot;0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;, MID( RFC__c, 13, 1))
)
)
)
,
false
)</errorConditionFormula>
    <errorMessage>RFC Incorrecto: El RFC para una persona física debe contener mayúsculas manteniendo el siguiente formato XXXXAAMMDD o XXXXAAMMDDXXX
Si el tipo de registro es Física, valida el RFC de persona física.</errorMessage>
</ValidationRule>