force-app/main/default/objects/Lead/listViews/Copia_de_Regi_n_Occidente.listView-meta.xml
<ListView>
    <fullName>Copia_de_Regi_n_Occidente</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Equipo__c</field>
        <operation>contains</operation>
        <value>Occidente</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Nuevo,Contactado,Trabajando</value>
    </filters>
    <label>Región Occidente</label>
    <sharedTo>
        <role>Gerente_Nacional_de_Ventas</role>
    </sharedTo>
</ListView>