force-app/main/default/objects/Lead/listViews/Creado_por_Ejecutivo.listView-meta.xml
<ListView>
    <fullName>Creado_por_Ejecutivo</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Creado por Ejecutivo</label>
    <sharedTo>
        <role>Asesor_de_Call_Center</role>
        <role>Coordinador_Distribuidores</role>
    </sharedTo>
</ListView>