force-app/main/default/objects/Lead/listViews/Creados_Call_Center.listView-meta.xml
<ListView>
    <fullName>Creados_Call_Center</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Creado_por_Equipo__c</field>
        <operation>startsWith</operation>
        <value>Call</value>
    </filters>
    <label>Creados Call Center</label>
    <sharedTo>
        <role>Asesor_de_Call_Center</role>
        <role>Coordinador_Call_Center</role>
        <role>Coordinador_Distribuidores</role>
    </sharedTo>
</ListView>