force-app/main/default/objects/Lead/listViews/Prospectos_de_Isabel_Reyes.listView-meta.xml
<ListView>
    <fullName>Prospectos_de_Isabel_Reyes</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>startsWith</operation>
        <value>Isabel</value>
    </filters>
    <label>Prospectos de Isabel Reyes</label>
    <sharedTo>
        <role>Unidades_Moviles</role>
    </sharedTo>
</ListView>