force-app/main/default/objects/Lead/listViews/Regi_n_Bajio.listView-meta.xml
<ListView>
    <fullName>Regi_n_Bajio</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Equipo__c</field>
        <operation>contains</operation>
        <value>Bajío</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Nuevo,Contactado,Trabajando</value>
    </filters>
    <label>Región Bajío</label>
    <sharedTo>
        <role>Gerente_Nacional_de_Ventas</role>
    </sharedTo>
</ListView>